overflow issue on android

--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow: hidden;
+  overflow: scroll;
 }
 
 .text h1 {
